orgs/reference/openai/codex/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_enable_suggestion_with_reason.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect:REDACTED_SECRET0, 0, 72, view.desired_height(72)))"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  Use $ to insert this app into the prompt.

  Enable this app to use it for the current request.
  Newly installed apps can take a few minutes to appear in /apps.


  › 1. Manage on ChatGPT
    2. Enable app
    3. Back
  Use tab / ↑ ↓ to move, enter to select, esc to close
